# jito-tip-router

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  docker_logs.sh  docker_start.sh  docker_stop.sh  fetch_switchboard_accounts.sh  format.sh  generate_client.sh  lines.sh  package-lock.json  package.json  pipe_test_output.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml  programs.env
.config/: nextest.toml
.github/workflows/: ci.yaml  jekyll-gh-pages.yaml
cli/: .env.example  .gitignore  Cargo.toml  Dockerfile  getting_started.md
cli/src/: args.rs  getters.rs  handler.rs  instructions.rs  lib.rs  log.rs
cli/src/keeper/: keeper_loop.rs  keeper_metrics.rs  keeper_state.rs  mod.rs
cli/src/ported/: mod.rs  submit_stats.rs  transactions.rs
clients/js/jito_mev_tip_distribution_ncn/errors/: jitoMevTipDistributionNcn.ts
clients/js/jito_mev_tip_distribution_ncn/instructions/: finalizeWeightTable.ts  initializeWeightTable.ts  updateWeightTable.ts
clients/js/jito_mev_tip_distribution_ncn/programs/: index.ts  jitoMevTipDistributionNcn.ts
clients/js/jito_tip_router/accounts/: ballotBox.ts  baseRewardRouter.ts  config.ts  epochMarker.ts  epochSnapshot.ts  epochState.ts  index.ts  ncnConfig.ts  ncnRewardRouter.ts  operatorSnapshot.ts  trackedMints.ts  vaultRegistry.ts  weightTable.ts
clients/js/jito_tip_router/errors/: index.ts  jitoTipRouter.ts
clients/js/jito_tip_router/instructions/: adminRegisterStMint.ts  adminSetConfigFees.ts  adminSetNewAdmin.ts  adminSetParameters.ts  adminSetStMint.ts  adminSetTieBreaker.ts  adminSetWeight.ts  adminUpdateWeightTable.ts  castVote.ts  claimWithPayer.ts  closeEpochAccount.ts  distributeBaseNcnRewardRoute.ts  (+34 more)
clients/rust/jito_mev_tip_distribution_ncn/: Cargo.toml
clients/rust/jito_tip_router/: Cargo.toml
core/: Cargo.toml
core/src/: account_payer.rs  ballot_box.rs  base_fee_group.rs  base_reward_router.rs  claim_status_payer.rs  config.rs  constants.rs  discriminators.rs  epoch_marker.rs  epoch_snapshot.rs  epoch_state.rs  error.rs  fees.rs  instruction.rs  jito_number.rs  lib.rs  loaders.rs  ncn_config.rs  ncn_fee_group.rs  ncn_reward_router.rs  precise_numbers.rs  stake_weight.rs  tracked_mints.rs  utils.rs  vault_registry.rs  weight_entry.rs  weight_table.rs
docs/: home.md
idl/: jito_mev_tip_distribution_ncn.json  jito_tip_router.json
integration_tests/: Cargo.toml
integration_tests/src/: main.rs
integration_tests/tests/: tests.rs
integration_tests/tests/fixtures/: generated_switchboard_accounts.rs  jito_tip_router_program-keypair.json  mod.rs  restaking_client.rs  stake_pool_client.rs  test_builder.rs  tip_distribution_client.rs  tip_router_client.rs  vault_client.rs
integration_tests/tests/helpers/: ballot_box.rs  mod.rs  serialized_accounts.rs
integration_tests/tests/tip_router/: admin_set_parameters.rs  admin_set_st_mint.rs  admin_update_weight_table.rs  cast_vote.rs  close_epoch_accounts.rs  distribute_rewards.rs  epoch_state.rs  initialize_ballot_box.rs  initialize_base_reward_router.rs  initialize_config.rs  initialize_epoch_snapshot.rs  initialize_ncn_config.rs  initialize_ncn_reward_router.rs  initialize_operator_snapshot.rs  initialize_tracked_mints.rs  initialize_vault_registry.rs  initialize_weight_table.rs  meta_tests.rs  mod.rs  register_mint.rs  register_vault.rs  restaking_variations.rs  set_config_fees.rs  set_new_admin.rs  set_tie_breaker.rs  set_tracked_mint_ncn_fee_group.rs  simulation_tests.rs  snapshot_vault_operator_delegation.rs  switchboard_set_weight.rs
meta_merkle_tree/: Cargo.toml
meta_merkle_tree/src/: error.rs  generated_merkle_tree.rs  lib.rs  merkle_tree.rs  meta_merkle_tree.rs  tree_node.rs  utils.rs
program/: Cargo.toml
program/src/: admin_initialize_config.rs  admin_register_st_mint.rs  admin_set_config_fees.rs  admin_set_new_admin.rs  admin_set_parameters.rs  admin_set_st_mint.rs  admin_set_tie_breaker.rs  admin_set_weight.rs  admin_update_weight_table.rs  cast_vote.rs  claim_with_payer.rs  close_epoch_account.rs  distribute_base_ncn_reward_route.rs  distribute_base_rewards.rs  distribute_ncn_operator_rewards.rs  distribute_ncn_vault_rewards.rs  finalize_weight_table.rs  initialize_ballot_box.rs  initialize_base_reward_router.rs  initialize_epoch_snapshot.rs  initialize_epoch_state.rs  initialize_ncn_config.rs  initialize_ncn_reward_router.rs  initialize_operator_snapshot.rs  initialize_tracked_mints.rs  initialize_vault_registry.rs  initialize_weight_table.rs  lib.rs  realloc_ballot_box.rs  realloc_base_reward_router.rs  realloc_epoch_state.rs  realloc_operator_snapshot.rs  realloc_vault_registry.rs  realloc_weight_table.rs  register_mint.rs  register_vault.rs  route_base_rewards.rs  route_ncn_rewards.rs  set_config_fees.rs  set_merkle_root.rs  (+6 more)
scripts/: generate-clients.js  update-attributes.js
shank_cli/: Cargo.toml
shank_cli/src/: main.rs
telegraf/: telegraf.conf
tip-router-operator-cli/: Cargo.toml
tip-router-operator-cli/scripts/: run_vrf_prover.sh  setup-test-ledger.sh  setup-vrf-test.sh
tip-router-operator-cli/src/: arg_matches.rs  backup_snapshots.rs  claim.rs  cli.rs  ledger_utils.rs  lib.rs  load_and_process_ledger.rs  main.rs  process_epoch.rs  rpc_utils.rs  stake_meta_generator.rs  submit.rs  tip_router.rs  vrf_monitor.rs  vrf_prover.rs
tip-router-operator-cli/tests/: integration_tests.rs
tip-router-operator-cli/tests/fixtures/accounts/: 3AVi9Tg9Uo68tJfuvoKvqKNWKkC5wPdSSdeBnizKZ6jT.json  96gYZGLnJYVFmbjzopPSU6QiEV5fGqZNyN9nmNhvrZU5.json  ADaUMid9yfUytqMBgopwjb2DTLSokTSzL1zt6iGPaS49.json  ADuUkR4vqLUMWXxW9gh6D6L8pMSawimctcNZ5pGwDcEt.json  Cw8CFyM9FkoMi7K7Crf6HNQqf4uEMzpKw6QNghXLvLkY.json  DfXygSm4jCyNCybVYYK6DwvWqjKee8pbDmJGcLWNDXjh.json  DttWaMuVvTiduZRnguLF7jNxTgiMBZ1hyAumKUiL2KRL.json  HFqU5x63VTqvQss8hp11i4wVV8bD44PvwucfZ2bU7gRe.json  HgzT81VF1xZ3FT9Eq1pHhea7Wcfq2bv4tWTP3VvJ8Y9D.json
tip_distribution_sdk/: Cargo.toml
tip_distribution_sdk/src/: instruction.rs  lib.rs
tip_payment_sdk/: Cargo.toml
tip_payment_sdk/idls/: jito_tip_payment.json
tip_payment_sdk/src/: lib.rs
(+29 files in other folders)
